force-app/main/default/objects/Unit__c/Unit__c.object-meta.xml
<CustomObject>
    <description>Apartment units under management</description>
    <label>Unit</label>
    <nameField>
        <label>Unit No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Units</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>