force-app/main/default/objects/Unit__c/fields/Finish_level__c.field-meta.xml
<CustomField>
    <fullName>Finish_level__c</fullName>
    <label>Finish level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>