force-app/main/default/objects/Unit__c/fields/Num_Bath__c.field-meta.xml
<CustomField>
    <fullName>Num_Bath__c</fullName>
    <label>Num Bath</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>