force-app/main/default/objects/Unit__c/fields/SqFt__c.field-meta.xml
<CustomField>
    <fullName>SqFt__c</fullName>
    <label>SqFt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>