force-app/main/default/objects/Unit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SqFt__c</columns>
    <columns>Num_Bath__c</columns>
    <columns>Num_Bedroom__c</columns>
    <columns>View__c</columns>
    <columns>Finish_level__c</columns>
    <columns>Balcony__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>